--- a/src/style.css
+++ b/src/style.css
@@ -81,3 +81,15 @@ body {
   color: black;
 }
 
+#end-container {
+  background-color: rgba(255, 255, 255);
+  border: 2px solid black;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  width: 50%;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
