--- a/src/style.css
+++ b/src/style.css
@@ -85,7 +85,7 @@ body {
 }
 
 #end-container {
-  background-color: rgba(255, 255, 255);
+  /* background-color: rgba(255, 255, 255);
   border: 2px solid black;
   padding: 20px;
   border-radius: 10px;
@@ -94,9 +94,17 @@ body {
   height: 60vh;
   display: flex;
   justify-content: center;
-  align-content: center;
-}
-#timer {
+  align-content: center; */
+  background-color: rgba(255, 255, 255);
+  border: 2px solid black;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  width: 50vh;
+  height: 50vh;
+
+} 
+ #timer {
   font-size: 20px;
   font-weight: bold;
   color: black;
@@ -108,6 +116,20 @@ body {
   border: 3px solid rgb(66, 154, 221) !important; 
 }
 #next-btn {
+  background-image: linear-gradient(to right, #ca5eeb, #66e0eb);
+  color: rgb(0, 0, 0);
+  border: solid 2px rgb(214, 104, 233);
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 16px;
+  width: 40%;
+  margin-top: 50px;
+  font-weight: bold;
+  font-size: 20px;
+  margin-left: 225px;
+} 
+#restart-btn {
   background-image: linear-gradient(to right, #ca5eeb, #66e0eb);
   color: rgb(0, 0, 0);
   border: solid 2px rgb(214, 104, 233);
